plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow'
}

// LWJGL3 version used for both API JARs and native extraction
def lwjglVersion = "3.4.0"

repositories {
    mavenCentral()
    google()
    maven {
        url 'https://oss.sonatype.org/content/repositories/snapshots'
    }
}

// Separate configuration so the extraction task can resolve native JARs independently
// of the fat-JAR build (shadow plugin only pulls from runtimeClasspath, not this config).
configurations {
    lwjglNatives
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.wiremock:wiremock:3.13.0'

    // Text to Speech
    implementation 'com.google.cloud:google-cloud-texttospeech:2.73.0'

    // Speech to Text
    implementation platform('com.google.cloud:libraries-bom:26.51.0')
    implementation 'com.google.cloud:google-cloud-speech:2.43.0'
    implementation 'com.google.api.grpc:proto-google-cloud-speech-v1p1beta1:0.135.0'
    implementation 'com.google.api.grpc:grpc-google-cloud-speech-v1p1beta1:0.135.0'

    // Gson for JSON parsing
    implementation 'com.google.code.gson:gson:2.13.1'

    // Guava for EventBus
    implementation 'com.google.guava:guava:33.0.0-jre'

    // Logging
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.3'
    // Reflections
    implementation 'org.reflections:reflections:0.9.12'

    //Utils
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    //Look and Feel
    implementation 'com.formdev:flatlaf:3.5.2'

    // SQLite driver
    implementation 'org.xerial:sqlite-jdbc:3.51.0.0'

    // JDBI 3 - the real winner for Java + SQL in 2025
    implementation platform('org.jdbi:jdbi3-bom:3.51.0')
    implementation 'org.jdbi:jdbi3-sqlobject'
    implementation 'org.jdbi:jdbi3-jackson2'
    implementation 'org.jdbi:jdbi3-core'

    // Connection pool
    implementation 'com.zaxxer:HikariCP:5.1.0'

    //sherpa
    implementation files('libs/sherpa-onnx-v1.12.33.jar')

    // In-process text embeddings (semantic command/memory matching). CPU-only, runs the
    // multilingual-e5-small int8 ONNX model shipped in distribution/embed/. ONNX Runtime drives
    // the model; the DJL HuggingFace tokenizer turns text into the model's input ids.
    implementation 'com.microsoft.onnxruntime:onnxruntime:1.20.0'
    implementation 'ai.djl.huggingface:tokenizers:0.30.0'

    // JNA - platform-native key simulation (left/right ctrl, alt, shift)
    implementation 'net.java.dev.jna:jna:5.14.0'
    implementation 'net.java.dev.jna:jna-platform:5.14.0'

    implementation 'org.zeromq:jeromq:0.6.0'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.18.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.0'

    // WebSocket server for external integrations
    implementation 'org.java-websocket:Java-WebSocket:1.5.7'

    // LWJGL3 with SDL3 bindings — joystick/HOTAS/gamepad/pedal input for StarVizion overlay.
    // API JARs: compile + runtime.  Native JARs: kept in the fat JAR as a last-resort fallback,
    // AND extracted to distribution/native/lwjgl/ at build time (see extractLwjglNatives task)
    // so SdlInputService can point LWJGL3 there instead of %TEMP%, sidestepping AV/noexec issues.
    implementation "org.lwjgl:lwjgl:${lwjglVersion}"
    implementation "org.lwjgl:lwjgl-sdl:${lwjglVersion}"
    runtimeOnly "org.lwjgl:lwjgl:${lwjglVersion}:natives-windows"
    runtimeOnly "org.lwjgl:lwjgl:${lwjglVersion}:natives-linux"
    runtimeOnly "org.lwjgl:lwjgl-sdl:${lwjglVersion}:natives-windows"
    runtimeOnly "org.lwjgl:lwjgl-sdl:${lwjglVersion}:natives-linux"
    lwjglNatives "org.lwjgl:lwjgl:${lwjglVersion}:natives-windows"
    lwjglNatives "org.lwjgl:lwjgl-sdl:${lwjglVersion}:natives-windows"
    lwjglNatives "org.lwjgl:lwjgl:${lwjglVersion}:natives-linux"
    lwjglNatives "org.lwjgl:lwjgl-sdl:${lwjglVersion}:natives-linux"
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
}

application {
    mainClass = 'elite.intel.App'
}

sourceSets {
    main {
        resources {
            srcDirs = ['src/main/resources']
            include '**/*.json'
            include '**/*.properties'
            include '**/*.conf'
            include '**/*.css'
            include '**/*.png'
            include '**/*.wav'
            include 'beep.wav'
            include '**/*.xml'
            include '**/fonts/*.ttf'
            include 'META-INF/MANIFEST.MF'
            include '**/db-migration/*.sql'
            include '**/scripts/*.sh'
            include '**/scripts/*.bat'
            include 'version.txt'
            include '**/native/**/*.so'
            include '**/native/**/*.dll'
        }
    }
}

// Flatten all LWJGL3 native DLLs / SOs out of their versioned JAR paths into one flat dir.
// SdlInputService points LWJGL3 here via org.lwjgl.system.SharedLibraryExtractPath so the
// loader never needs to write to %TEMP%, bypassing AV noexec and Unicode-path failures.
tasks.register('extractLwjglNatives', Sync) {
    description = 'Pre-extracts LWJGL3 native DLLs/SOs to distribution/native/lwjgl/.'
    from { configurations.lwjglNatives.collect { zipTree(it) } }
    into "${rootProject.projectDir}/distribution/native/lwjgl"
    include '**/*.dll', '**/*.so'
    exclude '**/META-INF/**'
    eachFile { fcd ->
        fcd.relativePath = new RelativePath(true, fcd.name)
    }
    includeEmptyDirs = false
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

shadowJar {
    archiveFileName = 'elite_intel.jar'
    manifest {
        attributes 'Main-Class': 'elite.intel.App'
    }
    mergeServiceFiles()
    destinationDirectory = file("${rootProject.projectDir}/distribution")
    dependsOn extractLwjglNatives
}

// Default test task — exclude local-integration tests so CI never tries to call Ollama,
// and embedding-manual tests so CI never tries to load the 118 MB ONNX model.
test {
    useJUnitPlatform {
        excludeTags 'local-integration'
        excludeTags 'embedding-manual'
    }
    systemProperty 'elite.intel.db.url', 'jdbc:sqlite:file:testdb?mode=memory&cache=shared&busy_timeout=5000'
    systemProperty 'elite.intel.db.pool.size', '1'
}

// Run with: ./gradlew localIntegrationTest
// Requires: Ollama (or configured LLM) running, app DB populated from at least one normal run
tasks.register('localIntegrationTest', Test) {
    description = 'Routing sanity check against live LLM. Not for CI.'
    group = 'verification'
    useJUnitPlatform {
        includeTags 'local-integration'
    }
    maxParallelForks = 1
    testLogging {
        events 'passed', 'failed', 'skipped'
        exceptionFormat 'full'
        showStandardStreams = true // surface the companion eval's printed conversation
    }
}

// Run with: ./gradlew embeddingTest
// Loads the real multilingual-e5-small int8 model from distribution/embed/ and prints the
// cosine matrix proving Russian/Ukrainian inflected forms cluster. Excluded from CI (118 MB model).
tasks.register('embeddingTest', Test) {
    description = 'Semantic-embedding smoke test: prints cosine similarities for inflected forms. Not for CI.'
    group = 'verification'
    useJUnitPlatform {
        includeTags 'embedding-manual'
    }
    maxParallelForks = 1
    testLogging {
        events 'passed', 'failed', 'skipped'
        exceptionFormat 'full'
        showStandardStreams = true // surface the printed cosine matrix
    }
}

// Ensure only the fat JAR is produced and used by assemble/build
tasks.named('jar') {
    enabled = false
}
tasks.named('assemble') {
    dependsOn tasks.shadowJar
}
tasks.named('startShadowScripts') {
    dependsOn ':updater:copyUpdaterToDistribution'
}
